# lico_core

./: Cargo.toml  README.md  renovate.json  rust-toolchain.toml
.cargo/: config.toml  nextest.toml
.github/workflows/: ci.yaml  test.yaml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs  lower_ast.rs
crates/analyzer/src/lower_ast/: context.rs  expr.rs  stmt.rs  utils.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  lib.rs
crates/lexer/tests/: common.rs  multi.rs  one.rs
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  lib.rs  parser.rs  token_set.rs  tree_builder.rs
crates/parser/src/grammar/: expression.rs  parameter.rs  pattern.rs  statement.rs
crates/parser/src/grammar/expression/: atom.rs
crates/parser/test_data/inline/: expr_literals.lico  for_stmt.lico  func.lico  param_list.lico
crates/parser/test_data/inline/ok/: attr_stmt.lico  local.lico  return_stmt.lico
crates/parser/tests/: inline.rs  inline_ok.rs  utils.rs
crates/parser/tests/snapshots/inline/: attr_stmt.snap  break_stmt.snap  continue_stmt.snap  expr_literals.snap  for_stmt.snap  func.snap  local.snap  param_list.snap  return_stmt.snap  var_stmt.snap  while_stmt.snap
crates/parser/tests/snapshots/inline/ok/: attr_stmt.snap  break_stmt.snap  continue_stmt.snap  expr_literals.snap  for_stmt.snap  func.snap  local.snap  param_list.snap  return_stmt.snap  var_stmt.snap  while_stmt.snap
crates/runtime/: Cargo.toml
crates/runtime/src/: il.rs  lib.rs  object.rs
crates/runtime/src/il/: instr.rs  opcode.rs  operand.rs
crates/runtime/src/object/: gc.rs  l_array.rs  l_function.rs  l_string.rs  l_table.rs
crates/runtime/tests/: object.rs  object_gc.rs
crates/syntax/: Cargo.toml  lico.ungram
crates/syntax/src/: ast.rs  hir.rs  lib.rs  syntax_error.rs  syntax_kind.rs  token.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  commands.rs  flags.rs  main.rs  utils.rs  xtest.rs
xtask/src/codegen/: parser.rs  syntax.rs
xtask/src/commands/: codegen.rs
xtask/src/commands/codegen/: parser.rs  syntax.rs
