[workspace]
resolver = "2"
members = [
  "xtask",
  "crates/*"
]

[workspace.package]
version = "0.3.0"
authors = ["ryota2357"]
edition = "2021"

[workspace.dependencies]
indexed_arena = "0.1.0"
lean_string = "0.4.0"
rowan = "0.16.1"
unicode-ident = "1.0.12"
unicode-properties = { version = "0.1.1", default-features = false }

[package]
name = "lico_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
analyzer.path = "crates/analyzer"
lexer.path    = "crates/lexer"
parser.path   = "crates/parser"
syntax.path   = "crates/syntax"

[profile.release]
lto = true
codegen-units = 1
